fixed image alignment in about page

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -10,10 +10,6 @@
   padding-bottom: 5em;
 }
 
-.padded-top-xs {
-  padding-top: 1.6em;
-}
-
 .padded-top {
   padding-top: 2em;
 }
