--- a/app/assets/stylesheets/pages/_projects.scss
+++ b/app/assets/stylesheets/pages/_projects.scss
@@ -14,9 +14,6 @@ body {
   box-sizing: border-box;
   overflow: auto;
 }
-.home p {
-  text-align: justify;
-}
 
 
 @media screen and (max-width: 991px) {
